--- a/28-portfolio/portfolio/src/styles/blocks/_burger.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_burger.scss
@@ -6,13 +6,22 @@
   right: 2rem;
   z-index: 100;
   border-radius: rem(5);
+  transition-duration: var(--transition-duration);
   color: var(--color-white);
   background-color: var(--color-bg-btn-menu);
+  display: none;
+
+  @include tablet {
+    display: block;
+  }
+
+
 
   &__button {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    row-gap: rem(5);
     align-items: center;
     width: rem(35);
     height: rem(35);
@@ -26,19 +35,20 @@
       .burger__line:nth-child(4) {
         rotate: 45deg;
         transform-origin: 0;
-        translate: 0.16em -0.8em;
+        translate: 0.16em -0.5em;
       }
       .burger__line:nth-child(3) {
         rotate: -45deg;
         transform-origin: 0;
-        translate: 0.20em 0.9em;
+        translate: 0.20em 0.7em;
       }
     }
+
   }
 
   &__line {
     height: rem(2);
-    width: 60%;
+    width: 50%;
     border-radius: rem(10);
     background-color: var(--color-white);
     transition-duration: var(--transition-duration);
