--- a/28-portfolio/portfolio/src/styles/blocks/_header.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_header.scss
@@ -5,14 +5,27 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: 30rem;
+  width: var(--width-header);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   z-index: 100;
+  transition-duration: var(--transition-duration);
   background-color: var(--color-bg-header);
+
+  @include tablet {
+    left: -30rem;
+  }
+
+ @include mobile {
+    width: 100vw;
+  }
+
+  &.show-header {
+    left: 0%;
+  }
 
   &__inner {
     width: 100%;
