--- a/28-portfolio/portfolio/src/styles/base/_variables.scss
+++ b/28-portfolio/portfolio/src/styles/base/_variables.scss
@@ -11,7 +11,7 @@
   --color-text: var(--color-white);
   --color-bg: var(--color-bg-body);
 
-
+  --width-header: 30rem;
 
   --font-family: "Nunito", sans-serif;
 
