--- a/28-portfolio/portfolio/src/styles/blocks/_about.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_about.scss
@@ -1,13 +1,25 @@
 @use "../helpers" as *;
 
 .about {
-  height: 100vh;
   padding: rem(16);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
   &__inner {
+    height: 100vh;
     margin-inline: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  &__title {
+    font-size: rem(55);
+    font-weight: 800;
+    color: var(--color-white);
+  }
+
+  &__subtitle {
+    font-size: rem(45);
+    font-weight: 800;
+    color: var(--color-white);
   }
 }
