--- a/28-portfolio/portfolio/src/styles/blocks/_switchers.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_switchers.scss
@@ -8,7 +8,7 @@
 
   &__theme-btn {
     padding: 4px;
-    background-color: #ababab;
+    //background-color: #ababab;
     color: var(--container-padding-x);
   }
 
