--- a/28-portfolio/portfolio/src/styles/blocks/_main-menu.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_main-menu.scss
@@ -12,19 +12,19 @@
     width: 65%;
   }
 
-  &__link {
-    @include fluid-text(18, 14);
-
-    font-weight: 700;
-    width: 100%;
-    display: inline-block;
-    padding: rem(10) 0;
-    border-radius: 0.7rem;
-    color: var(--color-white);
-    background-color: var(--color-bg-btn-menu);
-
-    @include hover{
-      background-color: var(--color-main-blue);
-    }
-  }
+  //&__link {
+  //  @include fluid-text(18, 14);
+  //
+  //  font-weight: 700;
+  //  width: 100%;
+  //  display: inline-block;
+  //  padding: rem(10) 0;
+  //  border-radius: 0.7rem;
+  //  color: var(--color-white);
+  //  background-color: var(--color-bg-btn-menu);
+  //
+  //  @include hover{
+  //    background-color: var(--color-main-blue);
+  //  }
+  //}
 }
