--- a/28-portfolio/portfolio/src/styles/style.scss
+++ b/28-portfolio/portfolio/src/styles/style.scss
@@ -7,7 +7,8 @@
 @use "blocks/header.scss";
 @use "blocks/switchers.scss";
 @use "blocks/profile-info.scss";
+@use "blocks/button.scss";
 @use "blocks/main-menu.scss";
 @use "blocks/burger";
 
-@use "blocks/about";
+@use "blocks/hero";
