--- a/28-portfolio/portfolio/src/styles/blocks/_button.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_button.scss
@@ -14,4 +14,13 @@
   @include hover{
     background-color: var(--color-main-blue);
   }
+
+  &--questionnaire {
+    display: inline-flex;
+    column-gap: 0.625rem;
+    max-width: max-content;
+    padding: rem(8) rem(25);
+    max-width: max-content;
+    background-color: var(--color-bg-header);
+  }
 }
