--- a/28-portfolio/portfolio/src/styles/style.scss
+++ b/28-portfolio/portfolio/src/styles/style.scss
@@ -21,3 +21,9 @@
 @use "blocks/portfolio";
 @use "blocks/tabs";
 @use "blocks/tab-card";
+@use "blocks/contact";
+@use "blocks/address";
+@use "blocks/form";
+@use "blocks/footer";
+@use "blocks/extra-menu";
+@use "blocks/soc1als";
