--- a/28-portfolio/portfolio/src/styles/blocks/_tab-card.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_tab-card.scss
@@ -12,32 +12,53 @@
   }
 
   &__box-image {
-    height: rem(160);
+    height: auto;
     border-top: var(--border-radius);
   }
 
   &__image {
+    width: 100%;
     border-top-left-radius: var(--border-radius);
     border-top-right-radius: var(--border-radius);
   }
 
   &__body {
     padding: rem(10);
+    display: flex;
+    flex-direction: column;
+    row-gap: rem(5);
+
+    @include tablet-S {
+      padding: rem(8);
+    }
   }
 
   &__name {
-    @include fluid-text(16, 14);
+    @include fluid-text(18, 14);
+
+    font-weight: 700;
     color: var(--color-main-blue);
   }
 
   &__info {
+    @include fluid-text(18, 14);
+
+    font-weight: 700;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     column-gap: rem(10);
   }
 
   &__link-project {
     width: rem(80);
     height: rem(15);
+  }
+
+  &__description {
+    @include fluid-text(16, 12);
+
+    line-height: 1.3;
+    color: var(--color-bg-tab);
   }
 }
