--- a/28-portfolio/portfolio/src/styles/blocks/_button.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_button.scss
@@ -21,6 +21,6 @@
     max-width: max-content;
     padding: rem(8) rem(25);
     max-width: max-content;
-    background-color: var(--color-bg-header);
+    background-color: var(--color-bg-btn-menu);
   }
 }
