--- a/28-portfolio/portfolio/src/styles/blocks/_soc1als.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_soc1als.scss
@@ -7,5 +7,17 @@
     column-gap: rem(10);
   }
 
+  &__icon {
+    transition-duration: var(--transition-duration);
+
+    &:hover {
+      scale: 1.09 !important;
+    }
+
+    @include mobile {
+      width: rem(25);
+      height: rem(25);
+    }
+  }
 
 }
