--- a/28-portfolio/portfolio/src/styles/blocks/_tabs.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_tabs.scss
@@ -16,7 +16,7 @@
     user-select: none;
     border-radius: var(--border-radius);
     color: var(--color-white);
-    background-color: var(--color-gray-border);
+    background-color: var(--color-bg-btn-menu);
   }
 
   &__button:hover {
