--- a/28-portfolio/portfolio/src/styles/base/_variables.scss
+++ b/28-portfolio/portfolio/src/styles/base/_variables.scss
@@ -3,16 +3,17 @@
 :root {
   --color-white: #fff;
   --color-gray-border: #fff4;
+  --color-gray-placeholder: #fff4;
   --color-bg-tab: #C6C6C6;
   --color-black: #000;
   --color-bg-body: #222;
   --color-bg-btn-menu: #333;
   --color-bg-header: #0d1117;
+  --color-bg-field-input: #0d1117;
   --color-main-blue: #00bfff;
   --color-border-color: #fff;
+  --color-text: #F9FAFB;
 
-  --color-text: var(--color-white);
-  --color-bg: var(--color-bg-body);
 
   --width-header: 25rem;
 
