--- a/28-portfolio/portfolio/src/styles/blocks/_tab-card.scss
+++ b/28-portfolio/portfolio/src/styles/blocks/_tab-card.scss
@@ -2,10 +2,9 @@
 
 .tab-card {
   transition-duration: var(--transition-duration);
-  box-shadow: var(--glow-box-shadow);
   border: rem(3) solid var(--color-main-blue);
   border-radius: var(--border-radius);
-  background-color: var(--color-gray-border);
+  background-color: var(--color-bg-header);
 
   &:hover {
     scale: 1.02 !important;
@@ -59,6 +58,6 @@
     @include fluid-text(16, 12);
 
     line-height: 1.3;
-    color: var(--color-bg-tab);
+    color: var(--color-text);
   }
 }
