--- a/28-portfolio/portfolio/src/styles/style.scss
+++ b/28-portfolio/portfolio/src/styles/style.scss
@@ -6,6 +6,7 @@
 
 @use "blocks/header";
 @use "blocks/switchers";
+@use "blocks/language-switcher";
 @use "blocks/profile-info";
 @use "blocks/button";
 @use "blocks/main-menu";
