--- a/29-reacts-practice/05-TOTDO-LIST-Lamkov-ROUTES/src/styles/components/todo-item.css
+++ b/29-reacts-practice/05-TOTDO-LIST-Lamkov-ROUTES/src/styles/components/todo-item.css
@@ -23,6 +23,22 @@
       pointer-events: none;
     }
   }
+
+  &.is-appearing {
+    animation: appear calc(var(--transition-duration) * 2);
+    pointer-events: none;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    translate: 0 -75%;
+  }
+  to {
+    opacity: 1;
+    translate: 0 0;
+  }
 }
 
 .todo-item__checkbox {
