--- a/28-portfolio/portfolio/src/styles/style.scss
+++ b/28-portfolio/portfolio/src/styles/style.scss
@@ -12,6 +12,7 @@
 @use "blocks/main-menu";
 @use "blocks/burger";
 @use "blocks/hero";
+@use "blocks/print-text";
 @use "blocks/section";
 @use "blocks/title";
 @use "blocks/about";
