--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/Header/header.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/Header/header.module.scss
@@ -1,3 +1,29 @@
+@use "../../app/styles/main.scss" as main;
+@use "../../app/styles/helpers/" as *;
+
 .header {
-    background-color: gainsboro;
+    width: 100vw;
+    height: rem(80);
+    background: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: rem(20) rem(60);
+  }
+
+.burgerButton {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    // margin-left: auto;
+    background-color: red;
+}
+
+.buttonLine {
+    width: 80%;
+    height: 2px;
+    background-color: black;
 }
