--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_globals.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_globals.scss
@@ -49,7 +49,7 @@ body {
   letter-spacing: -0.03em;
   overflow-x: hidden;
   scroll-behavior: smooth;
-  color: var(--color-text);
+  color: var(--color-black);
 //   background-color: var(--color-bg-body);
 
   @include tablet {
