--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_utils.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_utils.scss
@@ -1,6 +1,6 @@
 @use "../helpers" as *;
 
-.container {
+.containerMain {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
@@ -19,7 +19,7 @@
   cursor: pointer;
 }
 
-.visually-hidden {
+.visuallyHidden {
   position: absolute !important;
   width: 1px !important;
   height: 1px !important;
