--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_variables.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_variables.scss
@@ -1,21 +1,21 @@
 @use "../helpers" as *;
 :root {
   --color-white: #fff;
-  --burger-color: #79C142;
+  --green-color: #79C142;
   --search-input: #EEEEEE;
+  --color-black: #000;
+  --color-yellow: #ffda4a;
+  --color-dark-333: #333;
+  --color-bg-body: #ededed;
 
 
   --color-gray-border: #fff4;
   --color-gray-placeholder: #fff4;
   --color-bg-tab: #C6C6C6;
-  --color-black: #000;
-  --color-bg-body: #222;
-  --color-bg-btn-menu: #333;
+
   --color-bg-header: #0d1117;
-  --color-bg-field-input: #0d1117;
   --color-main-blue: #00bfff;
   --color-border-color: #fff;
-  --color-text: #F9FAFB;
 
   --width-header: 25rem;
 
@@ -29,11 +29,7 @@
   --border-radius: #{rem(8)};
 
   --transition-duration: 0.3s;
-  --box-shadow: 0rem 0.5rem 0.5rem rgba(0, 0, 0, 0.3);
-  --glow-box-shadow: 0rem 0rem 0.1rem var(--color-main-blue),
-  0rem 0rem 0.2rem var(--color-main-blue),
-  0rem 0rem 0.3rem var(--color-main-blue),
-  0rem 0rem 0.4rem var(--color-main-blue);
+  --box-shadow: 8px 13px 22px -18px rgba(66, 68, 90, 1);
 }
 
 .darkTheme {
