--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/NavBar/navBar.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/NavBar/navBar.module.scss
@@ -3,16 +3,20 @@
 
 .navBar {
   position: fixed;
+  padding: rem(25);
   height: 100vh;
-  width: 400px;
-  background-color: gray;
-  position: fixed;
+  width: 30%;
   top: 0;
   left: 0;
   display: flex;
   flex-direction: column;
   row-gap: rem(40);
-  transition: transform 0.3s ease; // Добавьте анимацию
+  z-index: 100;
+  transition: transform 0.3s ease;
+  background-color: var(--color-bg-body);
+
+  box-shadow: var(--box-shadow);
+  box-shadow: 17px 8px 30px -15px rgba(66, 68, 90, 1);
 
   &.visible {
     transform: translateX(0);
@@ -20,6 +24,7 @@
 
   &.hidden {
     transform: translateX(-100%);
+    box-shadow: none;
   }
 
   ul {
@@ -27,8 +32,32 @@
   }
 }
 
-.mainLinkNavBar {
+
+.listList {
   display: flex;
-  align-items: center;
-  column-gap: rem(10);
+  flex-direction: column;
+  row-gap: rem(10);
+}
+
+.listList:nth-child(3) {
+  padding-top: 15px;
+  border-top: 1px solid #9F9F9F;
+}
+
+.itemLink {
+  display: flex;
+  column-gap: rem(16);
+}
+
+.itemTitlt {
+  font-size: 18px;
+  font-weight: 600;
+  opacity: 0.9;
+  transition-duration: var(--transition-duration);
+  color: var(--color-dark-333);
+}
+
+.itemTitlt:hover {
+  opacity: 1;
+  color: #4FB500;
 }
