--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_variables.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/app/styles/base/_variables.scss
@@ -6,7 +6,9 @@
   --color-black: #000;
   --color-yellow: #ffda4a;
   --color-dark-333: #333;
+
   --color-bg-body: #ededed;
+  --color-bg-main: #4b3e63;
 
 
   --color-gray-border: #fff4;
