--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/HomePage/HomePage.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/HomePage/HomePage.module.scss
@@ -1,50 +1,130 @@
+@use "../../app/styles/main.scss" as main;
+@use "../../app/styles/helpers" as *;
+
+.homePage {
+  display: flex;
+  flex-direction: column;
+  row-gap: fluid(50, 40);
+  padding-block: fluid(30, 15);
+  background-color: var(--color-bg-body);
+}
+
+.sectionContent:not(:first-child) {
+  border-top: 1px solid var(--color-bg-main);
+}
+
+.sectionContent {
+  display: flex;
+  flex-direction: column;
+  row-gap: fluid(15, 5);
+  padding-top: fluid(15, 5);
+}
+
+.titleLink {
+  @include fluid-text(20, 16);
+
+  font-weight: 700;
+  transition-duration: var(--transition-duration);
+  color: var(--color-bg-main);
+}
+
+.titleLink:hover {
+  color: var(--green-color);
+}
+
 .carouselWrapper {
-    position: relative;
-    width: 100%;
-    max-width: 1200px; // или 100%
-    margin: 0 auto;
+  position: relative;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.containerScroll {
+  display: flex;
+  column-gap: fluid(20, 15);
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+
+  & > * {
+    flex-shrink: 0;
+    pointer-events: auto; 
   }
   
-  .container {
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    gap: 16px;
-    padding: 16px 0;
-    
-    // ✅ 1. Убираем скроллбар (опционально)
-    scrollbar-width: none;  // Firefox
-    &::-webkit-scrollbar {
-      display: none;  // Chrome, Safari
-    }
-    
-    // ✅ 2. ЗАПРЕЩАЕМ ЭЛЕМЕНТАМ СЖИМАТЬСЯ
-    & > * {
-      flex-shrink: 0;
-    }
-  }
-  
-  // ✅ 3. КНОПКИ ПОВЕРХ КОНТЕНТА
-  .prevButton, .nextButton {
+  &::after {
+    content: '';
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
-    background: rgba(0,0,0,0.5);
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-    
-    &:hover {
-      background: rgba(0,0,0,0.8);
-    }
-  }
-  
-  .prevButton {
+    top: 0;
     left: 0;
-  }
-  
-  .nextButton {
     right: 0;
+    bottom: 0;
+    pointer-events: none;
   }
+}
+
+.prevButton,
+.nextButton {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.8);
+  color: var(--color-white);
+  border: none;
+  padding: fluid(10, 5) fluid(15, 10);
+  cursor: pointer;
+  transition-duration: var(--transition-duration);
+
+  &:hover {
+    scale: 1.01;
+    color: var(--green-color);
+    background: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.prevButton {
+  left: 0;
+}
+
+.nextButton {
+  right: 0;
+}
+
+.cardMovie {
+  position: relative;
+  width: fluid(250, 150);
+  flex-shrink: 0;
+  overflow: hidden;
+  pointer-events: auto;
+  transition-duration: var(--transition-duration);
+}
+
+.cardMovie:hover {
+  scale: 1.02;
+}
+.cardMovie::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50%;
+  background: linear-gradient(to top, rgba(0, 0, 0, 1.7), transparent);
+}
+
+.cardMoviePoster {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+
+.cardMovieTitle {
+  @include abs-x;
+  @include fluid-text(18, 16);
+
+  text-align: center;
+  position: absolute;
+  color: var(--color-white);
+  top: 75%;
+  z-index: 100;
+}
