--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/NavBar/navBar.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/widgets/NavBar/navBar.module.scss
@@ -5,7 +5,7 @@
   position: fixed;
   padding: rem(25);
   height: 100vh;
-  width: 30%;
+  width: fluid(500, 360);
   top: 0;
   left: 0;
   display: flex;
