--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/features/SearchInput/ui/SearchInput.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/features/SearchInput/ui/SearchInput.module.scss
@@ -6,8 +6,7 @@
 }
 
 .inputElement {
-  max-width: rem(300);
-  width: 100%;
+ width: fluid(500, 200);
   outline: none;
   border: 1px solid transparent;
   padding: rem(10) rem(10);
@@ -16,6 +15,11 @@
   border-radius: 6px;
   background-color: var(--search-input);
   box-shadow: inset 0 0 0 1px #e3e3e3, inset 1px 2px 5px rgba(0, 0, 0, 0.2);
+
+  @include tablet-S {
+    display: block;
+    width: 100%;
+  }
 
   &::placeholder {
     color: #999; 
@@ -45,4 +49,15 @@
   position: absolute;
   right: rem(10);
   top: 46%;
+  pointer-events: none;
+
+  @include tablet-S {
+    top: 51%;
+  }
+}
+
+.wrapperSettings {
+  display: flex;
+  column-gap: rem(10);
+  max-width: rem(400);
 }
