--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/TopRankingsPage/TopRankingsPage.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/TopRankingsPage/TopRankingsPage.module.scss
@@ -1,40 +1,18 @@
-@use "../../app/styles/main.scss" as *;
-@use "../../app/styles/helpers/" as *;
+@use "../../app/styles/main.scss" as main;
+@use "../../app/styles/helpers" as *;
 
-// .genresPage {
-//   padding-block: fluid(40, 20);
-//   display: flex;
-//   flex-direction: column;
-//   row-gap: fluid(15, 10);
-//   background-color: var(--color-bg-body);
-// }
-
-// .listCards {
-//   display: grid;
-//   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-//   width: 100%;
-//   margin: 0 auto;
-//   gap: rem(15);
-// }
-
-
-.paginationActive {
-  background-color: #0EA107;
+.topRankingsPage {
+  padding-block: fluid(40, 20);
+  display: flex;
+  flex-direction: column;
+  row-gap: fluid(15, 10);
+  background-color: var(--color-bg-body);
 }
 
-.pagination {
-  max-width: 300px;
-  display: flex;
-  align-items: center;
-}
-
-.paginationWrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.paginationList {
-  display: flex;
-  align-items: center;
+.listCards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  width: 100%;
+  margin: 0 auto;
+  gap: rem(15);
 }
