--- a/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/ActorPage/ActorPage.module.scss
+++ b/29-reacts-practice/07-MOVIE-API-BULKOEV/Movie-API/src/pages/ActorPage/ActorPage.module.scss
@@ -4,6 +4,7 @@
 .homePage {
   display: flex;
   flex-direction: column;
+  row-gap: fluid(20, 10);
   padding-block: fluid(30, 15);
   background-color: var(--color-bg-body-alt);
 }
@@ -87,8 +88,9 @@
 .containerFilmography {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
-   & > span{
+  & > span {
     @include fluid-text(22, 16);
 
     font-weight: 600;
@@ -98,18 +100,57 @@
 }
 
 .listFilmography {
-  // display: grid;
-  // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  // gap: 12px;
-  // margin-top: 16px;
+  max-width: 60%;
+  //  display: flex;
+  //  justify-content: center;
 }
 
 .itemFilm {
+  max-width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   column-gap: fluid(8, 4);
+  border-bottom: 1px solid var(--color-bg-tab);
+  transition-duration: var(--transition-duration);
+
+  @include hover {
+    background: var(--color-bg-tab);
+  }
 }
 
+
+
 .linkFilm {
+  max-height: rem(60);
+  display: flex;
+  align-items: center;
+  column-gap: rem(15);
   color: var(--color-bg-main);
+}
+
+.linkProfession,
+.linkDescription {
+  @include fluid-text(10, 8);
+
+  font-weight: 400;
+  color: var(--color-black);
+}
+
+.ratingHigh {
+  color: #4caf50; // зеленый
+  font-weight: bold;
+}
+
+.ratingMedium {
+  color: #ff9800; // оранжевый
+  font-weight: 500;
+}
+
+.ratingLow {
+  color: #f44336; // красный
+}
+
+.ratingNone {
+  color: #9e9e9e; // серый
 }
